--- a/src/css/class.css
+++ b/src/css/class.css
@@ -3,8 +3,9 @@
 }
 
 .title {
-  font-size: 15rem;
+  font-size: 18rem;
   width: 70%;
+  margin-left: 1rem;
 }
 
 .fullname {
@@ -12,4 +13,41 @@
   text-align: end;
   width: 13%;
   margin-right: 10%;
+}
+
+.btw-title {
+  background: #0066cc;
+  color: #ffffff;
+  letter-spacing: 1rem;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+  border-radius: 20px;
+  padding: 0 10px;
+}
+.edutech-title {
+  color: #d41c22;
+}
+
+.tools-list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+  width: 59%;
+  margin: 0 auto;
+  justify-items: center;
+  align-items: center;
+  margin-top: 2rem;
+}
+
+.tool {
+  border: #0066cc 1px solid;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 6rem;
+  width: 20rem;
+  gap: 0.5rem;
 }
