--- a/src/css/class.css
+++ b/src/css/class.css
@@ -16,7 +16,7 @@
 }
 
 .btw-title {
-  background: #0066cc;
+  background: #2073c7;
   color: #ffffff;
   letter-spacing: 1rem;
   -webkit-border-radius: 20px;
@@ -27,7 +27,7 @@
   padding: 0 10px;
 }
 .edutech-title {
-  color: #d41c22;
+  color: #d41c59;
 }
 
 .tools-list {
@@ -42,7 +42,7 @@
 }
 
 .tool {
-  border: #0066cc 1px solid;
+  border: #227ad3 1px solid;
   display: flex;
   flex-direction: column;
   justify-content: center;
