--- a/src/css/class.css
+++ b/src/css/class.css
@@ -8,10 +8,14 @@
   margin-left: 1rem;
 }
 
+.subtitle {
+  font-size: clamp(5rem, 3vw, 7rem);
+}
+
 .fullname {
   font-size: 2rem;
   text-align: end;
-  width: 13%;
+  width: clamp(13%, 17vw, 20%);
   margin-right: 10%;
 }
 
@@ -34,7 +38,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
-  width: 59%;
+  width: 70%;
   margin: 0 auto;
   justify-items: center;
   align-items: center;
@@ -48,6 +52,10 @@
   justify-content: center;
   align-items: center;
   height: 6rem;
-  width: 20rem;
+  width: 12rem;
   gap: 0.5rem;
+}
+
+.tools-list {
+  border: #2073c7 1px solid;
 }
