--- a/src/css/class.css
+++ b/src/css/class.css
@@ -1,10 +1,10 @@
-.tool > img {
-  width: 3rem;
+.tool-logo {
+  width: 4rem;
 }
 
 .title {
-  font-size: clamp(15rem, 7vw, 18rem);
-  width: 70%;
+  font-size: clamp(14.5rem, 7vw, 18rem);
+  width: 1000px;
   margin-left: 1rem;
 }
 
@@ -15,8 +15,14 @@
 .fullname {
   font-size: 2rem;
   text-align: end;
-  width: clamp(13%, 17vw, 20%);
+  width: 15rem;
   margin-right: 10%;
+}
+
+.whoami-paragraph {
+  font-size: 1.5rem;
+  text-align: justify;
+  font-weight: 300;
 }
 
 .btw-title {
@@ -36,26 +42,61 @@
 
 .tools-list {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(5, 1fr);
   gap: 2rem;
-  width: 70%;
   margin: 0 auto;
   justify-items: center;
   align-items: center;
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
 
 .tool {
-  border: #227ad3 1px solid;
+  border: #31d322 1px solid;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 6rem;
+  height: 10rem;
   width: 12rem;
   gap: 0.5rem;
 }
 
-.tools-list {
+/* .tools-list {
   border: #2073c7 1px solid;
+} */
+
+.box {
+  border: 1px solid #9c9c9c;
+  background-color: rgb(65, 65, 65);
+  box-shadow: 10px 10px 0px 0px rgba(0, 0, 0);
+  -webkit-box-shadow: 10px 10px 0px 0px rgba(0, 0, 0);
+  -moz-box-shadow: 10px 10px 0px 0px rgba(0, 0, 0);
+  color: #e0e0e0;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.projects-container {
+  margin: 1rem;
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.documentation-container {
+  margin: 1rem;
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.documentation-container > img {
+  width: 45.5vw;
+}
+
+.project-content {
+  padding: 1rem;
 }
